MDEV-29718 Fix spider detection of same data node server

When the host is not specified, it defaults to localhost.