storage/spider/spd_db_mysql.cc
@@ -1982,7 +1982,7 @@ int spider_db_mbase::connect(
 
     if (!spider_param_same_server_link(thd))
     {
-      if (!strcmp(tgt_host, my_localhost))
+      if (!strcmp(tgt_host, my_localhost) || !tgt_host || !tgt_host[0])
       {
         if (!strcmp(tgt_socket, *spd_mysqld_unix_port))
         {
@@ -1992,7 +1992,7 @@ int spider_db_mbase::connect(
           DBUG_RETURN(ER_SPIDER_SAME_SERVER_LINK_NUM);
         }
       } else if (!strcmp(tgt_host, "127.0.0.1") ||
-        !strcmp(tgt_host, glob_hostname))
+        !strcmp(tgt_host, glob_hostname) || !tgt_host || !tgt_host[0])
       {
         if (tgt_port == (long) *spd_mysqld_port)
         {
